
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bloq.memds";
option java_outer_classname = "MemdsProto";
option objc_class_prefix = "MDS";

package memds;

service Memds {
  rpc Exec (RequestMsg) returns (ResponseMsg) {}
}

message StrGetOp {
  bytes key = 1;	// key of item to retrieve
  bool want_length = 2;	// (true) return value length, (false) return value
}

message StrGetRes {
  bytes value = 1;		// if !want_length, value requested
  uint64 value_length = 2;	// if want_length, filled with value length
}

message StrSetOp {
  bytes key = 1;	// key of item to store
  bytes value = 2;	// value of item to store
  bool return_old = 3;	// if true & old item present, return old-value stored at key
}

message StrSetRes {
  bytes old_value = 1;	// if return_old, old-value stored at key
}

message NumOp {
  bytes key = 1;	// key of item to increment
  sint64 n = 2;		// (optional) amount of increment
}

message NumRes {
  sint64 old_value = 1;	// value of key prior to operation
}

enum OpType {
  NOOP = 0;
  STR_GET = 1;
  STR_SET = 2;
  STR_DECR = 3;
  STR_DECRBY = 4;
  STR_INCR = 5;
  STR_INCRBY = 6;
  STR_APPEND = 7;
}

message Operation {
  OpType otype = 1;

  StrGetOp get = 10;
  StrSetOp set = 11;
  NumOp num = 12;
}

message RequestMsg {
  repeated Operation ops = 1;
}

message OpResult {
  bool ok = 1;		// success?
  int32 err_code = 2;	// error code, if !ok
  string err_message = 3;	// error message, if !ok

  OpType otype = 4;

  StrGetRes get = 10;
  StrSetRes set = 11;
  NumRes num = 12;
}

message ResponseMsg {
  bool ok = 1;		// success?
  int32 err_code = 2;	// error code, if !ok
  string err_message = 3;	// error message, if !ok

  repeated OpResult results = 4;
}

